# 2024-fastapi-study

./: README.md  main.py  pyproject.toml  webcam.py
templates/: Input.html  index.html
